--- a/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html
+++ b/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
+<link rel="stylesheet" media="screen and (min-width: 2560px)" href="4kresolution.css">
+<link rel="stylesheet" media="screen and (min-width: 1440px) and (max-width: 2559px)" href="2kresolution.css">
+<link rel="stylesheet" media="screen and (min-width: 1025px) and (max-width: 1439px)" href="computer.css">
+<link rel="stylesheet" media="screen and (min-width: 481px) and (max-width: 1024px) " href="tablet.css">
+<link rel="stylesheet" media="screen and (max-width: 480px) " href="smartphone.css">
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4Noob - Eng. Soft.- Disciplina 1 - Conteúdo 1</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,7 +26,7 @@
     </div>
 
     <div class="content-container">
-        <h1>Avalair Conteúdo</h1>
+        <h1>Avaliar Conteúdo</h1>
         <br>
         <br>
         <p>Gostaríamos muito de receber sua avaliação sobre o conteúdo presente em nosso site! Sua opinião é
