--- a/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
+++ b/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
@@ -10,9 +10,11 @@
 
 <body>
     <div class="top-container">
-        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span> Solicitar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span>
+            Solicitar Conteúdo</a>
         <hr>
-        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span> Avaliar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span>
+            Avaliar Conteúdo</a>
         <hr>
         <form id="search">
             <input type="text" placeholder="Pesquisar em Conteúdo">
@@ -29,7 +31,7 @@
         <a id="home-href" href="../Home/index.html">🏠 Home</a>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
-            <label for="subject-toggle-1" class="subject-label">Matéria 1</label>
+            <label for="subject-toggle-1" class="subject-label">Banco de Dados</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-2.html">Conteúdo 2</a>
@@ -37,7 +39,7 @@
         </div>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
-            <label for="subject-toggle-1" class="subject-label">Matéria 2</label>
+            <label for="subject-toggle-1" class="subject-label">DSWM</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-2.html">Conteúdo 2</a>
@@ -45,7 +47,7 @@
         </div>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
-            <label for="subject-toggle-1" class="subject-label">Matéria 3</label>
+            <label for="subject-toggle-1" class="subject-label">Analise e Projeto de Sistema</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-2.html">Conteúdo 2</a>
