--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4Noob - Eng. Soft.- Disciplina 1 - Conteúdo 1</title>
+    <title>4Noob - Eng. Soft.- Solicitar Conteúdo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -80,7 +80,7 @@
         <a id="home-href" href="/First-period/HTMLeCSS/College_Project/Home/index.html">🏠 Home</a>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
-            <label for="subject-toggle-1" class="subject-label">Matéria 1</label>
+            <label for="subject-toggle-1" class="subject-label">Banco de Dados</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-2.html">Conteúdo 2</a>
@@ -88,7 +88,7 @@
         </div>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
-            <label for="subject-toggle-1" class="subject-label">Matéria 2</label>
+            <label for="subject-toggle-1" class="subject-label">DSWM</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-2.html">Conteúdo 2</a>
@@ -96,7 +96,7 @@
         </div>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
-            <label for="subject-toggle-1" class="subject-label">Matéria 3</label>
+            <label for="subject-toggle-1" class="subject-label">Analise e Projeto de Sistema</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-2.html">Conteúdo 2</a>
