--- a/First-period/HTMLeCSS/Atividade-3/pag3.html
+++ b/First-period/HTMLeCSS/Atividade-3/pag3.html
@@ -11,23 +11,23 @@
 <body>
     <header>
         <div class="container">
-            <img class="logo" src="/First-period/HTMLeCSS/Atividade-3/images/logo.png">
+            <img class="logo" src="/image/logo.png">
             <div class="navbar-container">
                 <a class="navbar-item" href="pag1.html">home</a>
-                <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
+                <img src="/image/divisor.png">
                 <a class="navbar-item " href="pag2.html">Brasil</a>
-                <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
+                <img src="/image/divisor.png">
                 <a class="navbar-item" href="#">Internacional</a>
-                <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
+                <img src="/image/divisor.png">
                 <a class="navbar-item" href="#">Economia</a>
-                <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
+                <img src="/image/divisor.png">
                 <a class="navbar-item" href="#">Saúde</a>
-                <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
+                <img src="/image/divisor.png">
                 <a class="navbar-item" href="#">Ciência</a>
-                <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
+                <img src="/image/divisor.png">
                 <a class="navbar-item selecao" href="pag3.html">Fotos</a>
             </div>
-            <img class="mapa" src="/First-period/HTMLeCSS/Atividade-3/images/detalhe-topo.png">
+            <img class="mapa" src="/image/detalhe-topo.png">
         </div>
     </header>
 
@@ -40,7 +40,7 @@
                     <h4>Destaque</h4>
                     <div class="legislacao-container">
                         <h5>NOVA LEGISLAÇÃO</h5>
-                        <img src="/First-period/HTMLeCSS/Atividade-3/images/taxi.jpg">
+                        <img src="/image/taxi.jpg">
                         <p>Lorem Ipsim dolor sit amet, consectetur adipiscing elit.</p>
                         <a href="">Leia mais!</a>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="background mundo-container">
                     <h4>Mundo</h4>
                     <div class="mundo-flex">
-                        <img src="/First-period/HTMLeCSS/Atividade-3/images/tecnologia.jpg">
+                        <img src="/image/tecnologia.jpg">
                         <div class="mundo-text">
                             <h5>NOVAS TECNOLOGIAS!</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -57,7 +57,7 @@
                     </div>
                     <hr>
                     <div class="mundo-flex">
-                        <img src="/First-period/HTMLeCSS/Atividade-3/images/tecnologia.jpg">
+                        <img src="/image/tecnologia.jpg">
                         <div class="mundo-text">
                             <h5>NOVAS TECNOLOGIAS!</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -65,14 +65,14 @@
                     </div>
                     <hr>
                     <div class="mundo-flex">
-                        <img src="/First-period/HTMLeCSS/Atividade-3/images/tecnologia.jpg">
+                        <img src="/image/tecnologia.jpg">
                         <div class="mundo-text">
                             <h5>NOVAS TECNOLOGIAS!</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur</p>
                         </div>
                     </div>
                     <div class="mundo-flex">
-                        <img src="/First-period/HTMLeCSS/Atividade-3/images/tecnologia.jpg">
+                        <img src="/image/tecnologia.jpg">
                         <div class="mundo-text">
                             <h5>NOVAS TECNOLOGIAS!</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur</p>
